fix mix card alignment

--- a/styles.css
+++ b/styles.css
@@ -410,7 +410,7 @@ a:hover {
 .mix-info {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
 }
 
 .mix-title {
